[tool.poetry]
name = "jlox"
version = "0.1.0"
description = ""
authors = ["Gerrie Crafford <gj.crafford.77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.6.0", allow-prereleases = true}
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
